--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
     <script>
         // API Base URL - REPLACE THIS WITH YOUR DEPLOYED GOOGLE APPS SCRIPT WEB APP URL
-        const API_BASE = "PASTE_WEB_APP_URL"; // Example: https://script.google.com/macros/s/AKfycbz_YOUR_SCRIPT_ID/exec
+        const API_BASE = "https://script.google.com/macros/s/AKfycbw_awsazVP3ic3Vkgeqz-iOWyphr5Al8m-XAqrQA2uT03sOdjTmyuJ6hjSPBEVnEZwt/exec"; // Example: https://script.google.com/macros/s/AKfycbz_YOUR_SCRIPT_ID/exec
         const API_TOKEN = ""; // Optional: Set a token if you enabled security in Code.gs
 
         let allContainersData = []; // Stores the raw data from the server
