--- a/index1.html
+++ b/index1.html
@@ -3,93 +3,55 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>לוח בקרה לניהול מכולות</title>
+<title>לוח בקרה ניהול מכולות</title>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
-  * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Roboto', sans-serif; }
-  body {
-    background: linear-gradient(135deg, #1e3c72, #2a5298);
-    min-height: 100vh;
-    color: #fff;
-    direction: rtl;
-    padding: 15px;
-    overflow-x: hidden;
-  }
-
-  h1 { text-align: center; margin-bottom: 20px; font-weight: 700; }
-
-  .controls { display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; margin-bottom: 20px; }
-  .controls button, .controls input, .controls select {
-    border: none;
-    border-radius: 12px;
-    padding: 10px 15px;
-    font-size: 14px;
-    outline: none;
-    transition: all 0.3s ease;
-  }
-  .controls button { background: #4f46e5; color: #fff; cursor: pointer; }
-  .controls button:hover { background: #6d5ff5; transform: translateY(-2px); box-shadow: 0 4px 15px rgba(0,0,0,0.3); }
-  .controls input, .controls select { background: rgba(255,255,255,0.15); color: #fff; }
+  * { box-sizing: border-box; margin:0; padding:0; font-family:'Roboto', sans-serif; }
+  body { background: linear-gradient(135deg,#1e3c72,#2a5298); color:#fff; direction:rtl; padding:15px; min-height:100vh; }
+  h1 { text-align:center; margin-bottom:20px; font-weight:700; }
+  .controls { display:flex; flex-wrap:wrap; gap:10px; justify-content:center; margin-bottom:20px; }
+  .controls button,input,select { border:none; border-radius:12px; padding:10px 15px; font-size:14px; outline:none; transition:all 0.3s ease; }
+  .controls button { background:#4f46e5; color:#fff; cursor:pointer; }
+  .controls button:hover { background:#6d5ff5; transform:translateY(-2px); box-shadow:0 4px 15px rgba(0,0,0,0.3); }
+  .controls input, .controls select { background: rgba(255,255,255,0.15); color:#fff; }
   .controls input::placeholder { color: rgba(255,255,255,0.6); }
 
-  .metrics { display: grid; grid-template-columns: repeat(auto-fit,minmax(140px,1fr)); gap: 15px; margin-bottom: 20px; }
-  .metric {
-    background: rgba(255,255,255,0.15);
-    backdrop-filter: blur(12px);
-    border-radius: 15px;
-    padding: 20px;
-    text-align: center;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-  }
-  .metric:hover { transform: translateY(-5px); box-shadow: 0 8px 25px rgba(0,0,0,0.4); }
-  .metric span { display: block; margin-top: 10px; font-size: 20px; font-weight: 700; }
+  .metrics { display:grid; grid-template-columns:repeat(auto-fit,minmax(140px,1fr)); gap:15px; margin-bottom:20px; }
+  .metric { background: rgba(255,255,255,0.15); backdrop-filter: blur(12px); border-radius:15px; padding:20px; text-align:center; transition:transform 0.3s ease,box-shadow 0.3s ease; }
+  .metric:hover { transform: translateY(-5px); box-shadow:0 8px 25px rgba(0,0,0,0.4); }
+  .metric span { display:block; margin-top:10px; font-size:20px; font-weight:700; }
 
-  canvas { background: rgba(255,255,255,0.15); backdrop-filter: blur(12px); border-radius: 15px; margin-bottom: 20px; }
+  canvas { background: rgba(255,255,255,0.15); backdrop-filter: blur(12px); border-radius:15px; margin-bottom:20px; }
 
-  .table-wrapper { overflow-x: auto; margin-bottom: 30px; }
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    min-width: 900px;
-    background: rgba(255,255,255,0.1);
-    border-radius: 15px;
-    overflow: hidden;
-    backdrop-filter: blur(12px);
-    animation: fadeIn 0.6s ease;
-  }
-  th, td {
-    padding: 12px 10px;
-    text-align: center;
-    transition: background 0.3s ease;
-  }
-  th { background: rgba(255,255,255,0.2); font-weight: 500; }
+  .table-wrapper { overflow-x:auto; margin-bottom:30px; }
+  table { width:100%; border-collapse:collapse; min-width:1000px; background: rgba(255,255,255,0.1); border-radius:15px; overflow:hidden; backdrop-filter: blur(12px); animation: fadeIn 0.6s ease; }
+  th,td { padding:12px 10px; text-align:center; transition:background 0.3s ease; }
+  th { background: rgba(255,255,255,0.2); font-weight:500; }
   tr:hover td { background: rgba(255,255,255,0.1); }
 
-  button.edit-btn {
-    background: #f97316;
-    color: #fff;
-    border-radius: 8px;
-    padding: 6px 10px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-  }
-  button.edit-btn:hover { transform: scale(1.05); box-shadow: 0 4px 15px rgba(0,0,0,0.3); }
+  button.edit-btn { background:#f97316; color:#fff; border-radius:8px; padding:6px 10px; cursor:pointer; transition:all 0.3s ease; }
+  button.edit-btn:hover { transform:scale(1.05); box-shadow:0 4px 15px rgba(0,0,0,0.3); }
 
-  @keyframes fadeIn {
-    from { opacity: 0; transform: translateY(15px);}
-    to { opacity: 1; transform: translateY(0);}
-  }
+  /* Popup */
+  .popup-overlay { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5); justify-content:center; align-items:center; z-index:1000; }
+  .popup { background: rgba(255,255,255,0.15); backdrop-filter:blur(15px); padding:20px; border-radius:15px; width:90%; max-width:500px; position:relative; }
+  .popup h2 { text-align:center; margin-bottom:15px; }
+  .popup label { display:block; margin:10px 0 5px; }
+  .popup input { width:100%; padding:8px; border-radius:8px; border:none; }
+  .popup button { margin-top:15px; width:100%; padding:10px; border-radius:12px; background:#4f46e5; color:#fff; font-weight:700; cursor:pointer; }
+  .popup .close { position:absolute; top:10px; left:10px; cursor:pointer; font-size:20px; font-weight:700; }
 
-  @media(max-width: 600px){
-    .controls { flex-direction: column; }
-    .metric { padding: 15px; }
-  }
+  @keyframes fadeIn { from{opacity:0; transform:translateY(15px);} to{opacity:1; transform:translateY(0);} }
+
+  @media(max-width:600px){ .controls{flex-direction:column;} .metric{padding:15px;} }
 </style>
 </head>
 <body>
+
 <h1>לוח בקרה לניהול מכולות</h1>
 
+<!-- Controls -->
 <div class="controls">
   <button id="newOrderBtn">+ הזמנה חדשה</button>
   <button id="refreshBtn">רענן</button>
@@ -98,6 +60,7 @@
   <input type="number" id="daysMax" placeholder="ימים שעברו (מקסימום)">
 </div>
 
+<!-- Metrics -->
 <div class="metrics">
   <div class="metric">סה"כ פתוחות: <span id="totalOpen">0</span></div>
   <div class="metric">חריגות (&gt; 10 ימים): <span id="overdue">0</span></div>
@@ -105,9 +68,11 @@
   <div class="metric">ממוצע ימים שעברו: <span id="avgDays">0.0</span></div>
 </div>
 
+<!-- Graphs -->
 <canvas id="actionChart" height="150"></canvas>
 <canvas id="daysChart" height="150"></canvas>
 
+<!-- Table -->
 <div class="table-wrapper">
   <table id="ordersTable">
     <thead>
@@ -124,125 +89,158 @@
         <th>פעולות</th>
       </tr>
     </thead>
-    <tbody>
-      <tr><td colspan="10">לא נמצאו הזמנות תואמות.</td></tr>
-    </tbody>
+    <tbody><tr><td colspan="10">לא נמצאו הזמנות תואמות.</td></tr></tbody>
   </table>
+</div>
+
+<!-- Popup -->
+<div class="popup-overlay" id="popupOverlay">
+  <div class="popup" id="popup">
+    <span class="close" onclick="closePopup()">×</span>
+    <h2>פרטי הזמנה</h2>
+    <div id="popupFields"></div>
+    <button onclick="savePopup()">שמור שינויים</button>
+  </div>
 </div>
 
 <script>
 const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbx7E0OrpJc7Yq4xhFTj376xVMo9VfvhLAjDZ6zdt8QGzXvlzKkANZxn4cV5AfvDPQ0m/exec';
 let allOrders = [];
+let currentEdit = null;
 
 document.getElementById('refreshBtn').addEventListener('click', fetchOrders);
 document.getElementById('searchInput').addEventListener('input', filterOrders);
 document.getElementById('actionFilter').addEventListener('change', filterOrders);
+document.getElementById('newOrderBtn').addEventListener('click', newOrder);
 
 async function fetchOrders() {
   const res = await fetch(`${SCRIPT_URL}?action=list`);
   const data = await res.json();
-  if (data.success) {
-    allOrders = data.data;
-    populateActionFilter();
-    updateDashboard(allOrders);
-  } else {
-    alert('שגיאה בשליפת נתונים');
-  }
+  if(data.success){ allOrders=data.data; populateActionFilter(); updateDashboard(allOrders); }
 }
 
 function populateActionFilter() {
   const select = document.getElementById('actionFilter');
-  const actions = [...new Set(allOrders.map(o => o['סוג פעולה']).filter(a => a))];
+  const actions = [...new Set(allOrders.map(o=>o['סוג פעולה']).filter(a=>a))];
   select.innerHTML = '<option value="">כל סוגי הפעולה</option>';
-  actions.forEach(a => {
-    const option = document.createElement('option');
-    option.value = a;
-    option.textContent = a;
-    select.appendChild(option);
-  });
+  actions.forEach(a=>{ const option=document.createElement('option'); option.value=a; option.textContent=a; select.appendChild(option); });
 }
 
 function filterOrders() {
-  const searchTerm = document.getElementById('searchInput').value.toLowerCase();
-  const actionFilter = document.getElementById('actionFilter').value;
-  const daysMax = parseInt(document.getElementById('daysMax').value) || Infinity;
+  const searchTerm=document.getElementById('searchInput').value.toLowerCase();
+  const actionFilter=document.getElementById('actionFilter').value;
+  const daysMax=parseInt(document.getElementById('daysMax').value)||Infinity;
 
-  const filtered = allOrders.filter(o => {
-    const matchesSearch = o['שם לקוח'].toLowerCase().includes(searchTerm) ||
-                          o['שם סוכן'].toLowerCase().includes(searchTerm) ||
-                          o['תעודה'].toLowerCase().includes(searchTerm);
-    const matchesAction = actionFilter ? o['סוג פעולה'] === actionFilter : true;
-    const matchesDays = parseInt(o['ימים שעברו']) <= daysMax;
+  const filtered = allOrders.filter(o=>{
+    const matchesSearch=o['שם לקוח'].toLowerCase().includes(searchTerm)||
+                        o['שם סוכן'].toLowerCase().includes(searchTerm)||
+                        o['תעודה'].toLowerCase().includes(searchTerm);
+    const matchesAction=actionFilter?o['סוג פעולה']===actionFilter:true;
+    const matchesDays=parseInt(o['ימים שעברו'])<=daysMax;
     return matchesSearch && matchesAction && matchesDays;
   });
-
   updateDashboard(filtered);
 }
 
 function updateDashboard(orders) {
-  const tbody = document.querySelector('#ordersTable tbody');
-  tbody.innerHTML = '';
-  if (orders.length === 0) {
-    tbody.innerHTML = '<tr><td colspan="10">לא נמצאו הזמנות תואמות.</td></tr>';
-  } else {
-    orders.forEach(o => {
-      const tr = document.createElement('tr');
-      tr.innerHTML = `
+  const tbody=document.querySelector('#ordersTable tbody');
+  tbody.innerHTML='';
+  if(orders.length===0){ tbody.innerHTML='<tr><td colspan="10">לא נמצאו הזמנות תואמות.</td></tr>'; }
+  else{
+    orders.forEach(o=>{
+      const tr=document.createElement('tr');
+      tr.innerHTML=`
         <td>${o['תעודה']}</td>
         <td>${o['שם לקוח']}</td>
         <td>${o['שם סוכן']}</td>
-        <td>${o['מתאריך']}</td>
+        <td>${formatDate(o['מתאריך'])}</td>
         <td>${o['סוג פעולה']}</td>
         <td>${o['ימים שעברו']}</td>
         <td>${o['מס" מכולה ירדה']}</td>
         <td>${o['מס" מכולה עלתה']}</td>
         <td>${o['ימים שעברו (עלתה)']}</td>
-        <td><button class="edit-btn" onclick="alert('עריכה עתידית')">ערוך</button></td>
+        <td><button class="edit-btn" onclick="openPopup(${allOrders.indexOf(o)})">ערוך</button></td>
       `;
       tbody.appendChild(tr);
     });
   }
 
   // עדכון מדדים
-  const totalOpen = orders.length;
-  const overdue = orders.filter(o => parseInt(o['ימים שעברו']) > 10).length;
-  const today = orders.filter(o => o['סוג פעולה'] === 'איסוף' && o['מתאריך'] === new Date().toLocaleDateString('he-IL')).length;
-  const avgDays = orders.length ? (orders.reduce((sum, o) => sum + parseInt(o['ימים שעברו']), 0)/orders.length).toFixed(1) : 0.0;
+  const totalOpen=orders.length;
+  const overdue=orders.filter(o=>parseInt(o['ימים שעברו'])>10).length;
+  const today=orders.filter(o=>o['סוג פעולה']==='איסוף'&&o['מתאריך']===new Date().toLocaleDateString('he-IL')).length;
+  const avgDays=orders.length? (orders.reduce((sum,o)=>sum+parseInt(o['ימים שעברו']),0)/orders.length).toFixed(1):0.0;
 
-  document.getElementById('totalOpen').textContent = totalOpen;
-  document.getElementById('overdue').textContent = overdue;
-  document.getElementById('todayActions').textContent = today;
-  document.getElementById('avgDays').textContent = avgDays;
+  document.getElementById('totalOpen').textContent=totalOpen;
+  document.getElementById('overdue').textContent=overdue;
+  document.getElementById('todayActions').textContent=today;
+  document.getElementById('avgDays').textContent=avgDays;
 
   renderActionChart(orders);
   renderDaysChart(orders);
 }
 
-function renderActionChart(orders) {
-  const ctx = document.getElementById('actionChart').getContext('2d');
-  const counts = {};
-  orders.forEach(o => { counts[o['סוג פעולה']] = (counts[o['סוג פעולה']]||0)+1; });
+function formatDate(dateStr){
+  const d=new Date(dateStr);
+  if(isNaN(d)) return dateStr;
+  return `${String(d.getDate()).padStart(2,'0')}/${String(d.getMonth()+1).padStart(2,'0')}/${d.getFullYear()}`;
+}
 
+function renderActionChart(orders){
+  const ctx=document.getElementById('actionChart').getContext('2d');
+  const counts={};
+  orders.forEach(o=>{ counts[o['סוג פעולה']]=(counts[o['סוג פעולה']]||0)+1; });
   if(window.actionChartInstance) window.actionChartInstance.destroy();
-  window.actionChartInstance = new Chart(ctx, {
-    type: 'bar',
-    data: { labels: Object.keys(counts), datasets: [{ label: 'התפלגות סוגי פעולה', data: Object.values(counts), backgroundColor: 'rgba(79,70,229,0.7)' }] },
-    options: { responsive: true }
+  window.actionChartInstance=new Chart(ctx,{type:'bar',data:{labels:Object.keys(counts),datasets:[{label:'התפלגות סוגי פעולה',data:Object.values(counts),backgroundColor:'rgba(79,70,229,0.7)'}]},options:{responsive:true}});
+}
+
+function renderDaysChart(orders){
+  const ctx=document.getElementById('daysChart').getContext('2d');
+  const days=orders.map(o=>parseInt(o['ימים שעברו'])).sort((a,b)=>a-b);
+  if(window.daysChartInstance) window.daysChartInstance.destroy();
+  window.daysChartInstance=new Chart(ctx,{type:'bar',data:{labels:days,datasets:[{label:'היסטוגרמת ימים שעברו',data:days,backgroundColor:'rgba(249,115,22,0.7)'}]},options:{responsive:true}});
+}
+
+// Popup
+function openPopup(index){
+  currentEdit=index;
+  const order=allOrders[index];
+  const container=document.getElementById('popupFields');
+  container.innerHTML='';
+  for(const key in order){
+    container.innerHTML+=`<label>${key}</label><input type="text" id="popup_${key}" value="${order[key]}">`;
+  }
+  document.getElementById('popupOverlay').style.display='flex';
+}
+
+function closePopup(){ document.getElementById('popupOverlay').style.display='none'; }
+
+function savePopup(){
+  if(currentEdit===null) return;
+  const order=allOrders[currentEdit];
+  for(const key in order){
+    const val=document.getElementById(`popup_${key}`).value;
+    order[key]=val;
+  }
+  fetch(`${SCRIPT_URL}?action=update&index=${currentEdit}`,{
+    method:'POST',
+    body:JSON.stringify(order),
+    headers:{'Content-Type':'application/json'}
+  }).then(r=>r.json()).then(res=>{
+    if(res.success){ updateDashboard(allOrders); closePopup(); }
+    else alert('שגיאה בעדכון ההזמנה');
   });
 }
 
-function renderDaysChart(orders) {
-  const ctx = document.getElementById('daysChart').getContext('2d');
-  const days = orders.map(o => parseInt(o['ימים שעברו'])).sort((a,b)=>a-b);
-  if(window.daysChartInstance) window.daysChartInstance.destroy();
-  window.daysChartInstance = new Chart(ctx, {
-    type: 'bar',
-    data: { labels: days, datasets: [{ label: 'היסטוגרמת ימים שעברו', data: days, backgroundColor: 'rgba(249,115,22,0.7)' }] },
-    options: { responsive: true }
-  });
+// New order
+function newOrder(){
+  const newO={ 'תעודה':'','שם לקוח':'','שם סוכן':'','מתאריך':'','סוג פעולה':'','ימים שעברו':'0','מס" מכולה ירדה':'','מס" מכולה עלתה':'','ימים שעברו (עלתה)':'0' };
+  allOrders.push(newO);
+  openPopup(allOrders.length-1);
 }
 
 fetchOrders();
 </script>
+
 </body>
 </html>
