--- a/index3.html
+++ b/index3.html
@@ -449,7 +449,7 @@
 
     <script>
         // API Base URL - REPLACE THIS WITH YOUR DEPLOYED GOOGLE APPS SCRIPT WEB APP URL
-        const API_BASE = "PASTE_WEB_APP_URL"; // Example: https://script.google.com/macros/s/AKfycbz_YOUR_SCRIPT_ID/exec
+        const API_BASE = "https://script.google.com/macros/s/AKfycbx7E0OrpJc7Yq4xhFTj376xVMo9VfvhLAjDZ6zdt8QGzXvlzKkANZxn4cV5AfvDPQ0m/exec"; // Example: https://script.google.com/macros/s/AKfycbz_YOUR_SCRIPT_ID/exec
         const API_TOKEN = ""; // Optional: Set a token if you enabled security in Code.gs
 
         let allContainersData = []; // Stores the raw data from the server
