--- a/index.html
+++ b/index.html
@@ -966,7 +966,8 @@
             <p>&copy; 2025 מערכת CRM למכולות. כל הזכויות שמורות.</p>
         </footer>
     </div>
-
+<link rel="stylesheet" href="style.css">
+<script src="script.js"></script>
     <!-- Custom JavaScript - קוד JavaScript מותאם אישית -->
     <!-- שימו לב: יש לוודא שקובץ script.js מעודכן לתמוך באלמנטים החדשים ובפונקציונליות המשופרת. -->
     <script src="script.js"></script>
