--- a/index2.html
+++ b/index2.html
@@ -3630,8 +3630,8 @@ ${order['הערות'] ? `הערות: ${order['הערות']}\n` : ''}
     }
 
     // --- Login/Logout Functions (Basic Example) ---
-    const VALID_USERNAME = 'user';
-    const VALID_PASSWORD = 'password';
+    const VALID_USERNAME = 'סבן';
+    const VALID_PASSWORD = '1125';
 
     function handleLogin() {
         const usernameInput = document.getElementById('username');
